--- a/AdventureWorksSales/AdventureWorksSales.csproj
+++ b/AdventureWorksSales/AdventureWorksSales.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.2.0.90\lib\net461\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="Dapper.Data, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.Data.2.0.0\lib\net45\Dapper.Data.dll</HintPath>
@@ -55,15 +55,25 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="DataAccess.cs" />
+    <Compile Include="DetallForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DetallForm.Designer.cs">
+      <DependentUpon>DetallForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SalesOrderDetail.cs" />
     <Compile Include="SalesOrderHeader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DetallForm.resx">
+      <DependentUpon>DetallForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
